load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    deps = [
        "//endorctl/internal:toolchain",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//endorctl/internal:scan",
    ],
)