load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//:__subpackages__"])

bzl_library(
    name = "toolchain",
    srcs = [
        "toolchain.bzl",
    ],
    deps = [
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "scan",
    srcs = ["scan.bzl"],
)
